Se realizan ajustes en los componentes

--- a/Urgencias-Cliente/src/assets/i18n/es.json
+++ b/Urgencias-Cliente/src/assets/i18n/es.json
@@ -15,7 +15,7 @@
 	"salida_paciente": "Salida paciente: ",
     "email": "Correo electrónico",
     "password": "Contraseña",
-    "available_books": "Pacientes",
+    "available_urgencias": "Pacientes",
     "loans": "Préstamos",
     "do_loan": "Nuevo paciente",
     "spanish": "Español",
@@ -38,10 +38,9 @@
     "loan": "Préstamo",
     "person_name": "NOMBRE DE PERSONA",
     "save": "Guardar",
-	"facturar": "Facturar",
 	"return": "Volver",
-    "edit_book": "Editar paciente",
-    "create_book": "Ingresar paciente",
+    "edit_urgencia": "Editar paciente",
+    "create_urgencia": "Ingresar paciente",
     "username": "Nombre de paciente"
   },
   "validation": {
@@ -54,7 +53,7 @@
     "save_role": "Save role",
     "new_user": "New user",
     "save": "Save",
-    "cancel": "Cancel",
+    "cancel": "NO",
     "new_document": "New document",
     "download_file": "Download file",
     "ok": "OK",
@@ -64,21 +63,20 @@
     "congratulations": "Felicitaciones!",
     "confirm": "Confirmar",
     "error": "Error",
-    "deleted_book": "El paciente se ha eliminado",
+    "deleted_urgencia": "El paciente se ha eliminado",
 	"factuar_exito": "El paciente ha salido exitosamente",
     "sure_to_delete": "¿Está seguro de eliminar este registro?",
-	"sure_to_facturar": "¿Está seguro de facturar esta urgencia?",
 	"sure_to_volver": "¿Está seguro que desea salir?",
 	"registrar_operacion": "Se registro la operación",
 	"registrar_hospitalizacion": "Se registro la hospitalización",
-    "book_doesnt_exist":"El libro no existe",
+    "urgencia_doesnt_exist":"El libro no existe",
 	"sure_to_facturar": "¿Está seguro de dar salida al paciente?",
     "yes": "Si",
     "cancel": "Cancelar",
     "important": "Importante",
     "success": "Exito",
     "upload_can_take_long": "La carga de las tarifas se hará en segundo plano y puede tomar varios minutos.",
-    "stored_book":"Paciente ingresado",
+    "stored_urgencia":"Paciente ingresado",
     "not_login":"No puede iniciar sesión, intente más tarde"
   }
 }
